Update copyright lines

--- a/test/BigDecimal_test.html
+++ b/test/BigDecimal_test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-   Copyright (c) 2011 Daniel Trebbien
+   Copyright (c) 2012 Daniel Trebbien and others
    Portions Copyright (c) 2003 STZ-IDA and PTV AG, Karlsruhe, Germany
 
    All rights reserved.
